--- a/templates/clone/main.html
+++ b/templates/clone/main.html
@@ -18,7 +18,7 @@
             href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
             rel="stylesheet"
         />
-        <title>Instagram clone 만들꺼임</title>
+        <title>Instagram clone</title>
     </head>
 
     <!-- feed_box -->
