--- a/templates/clone/main.html
+++ b/templates/clone/main.html
@@ -18,145 +18,198 @@
             href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
             rel="stylesheet"
         />
+
+        <link rel="stylesheet" href="style.css?after">
+
         <title>Instagram clone</title>
     </head>
 
-    <!-- feed_box -->
     <style>
-        .main_body {
-            display: flex;
-            justify-content: center;
-            padding-top: 50px;
-            background-color: #fafafa;
-        }
 
-        .left_body {
-            margin-right: 100px;
-            width: 500px;
-            height: 2000px;
-            display: flex;
-            flex-direction: column;
-        }
+    .main_body {
+        display: flex;
+        justify-content: center;
+        padding-top: 50px;
+        background-color: #fafafa;
+    }
 
-        .right_body {
-            padding-top: 20px;
-            width: 300px;
-            height: 1000px;
-            left: 72%;
-            position: fixed;
-        }
+    .left_body {
+        margin-right: 100px;
+        width: 500px;
+        height: 2000px;
+        display: flex;
+        flex-direction: column;
+    }
 
-        .feed_box {
-            background-color: white;
-            width: 480px;
-            margin: 10px;
-            min-height: auto;
-            padding-bottom: 10px;
-        }
+    .right_body {
+        padding-top: 20px;
+        width: 300px;
+        height: 1000px;
+        left: 72%;
+        position: fixed;
+    }
 
-        .feed_img {
-            width: 100%;
-            object-fit: contain;
-        }
+    .feed_box {
+        background-color: white;
+        width: 480px;
+        margin: 10px;
+        min-height: auto;
+        padding-bottom: 10px;
+    }
 
-        .feed_content {
-            padding: 0px 10px;
-        }
+    .feed_img {
+        width: 100%;
+        object-fit: contain;
+    }
 
-        .feed_like {
-            padding: 0px 10px;
-        }
+    .feed_content {
+        padding: 0px 10px;
+    }
 
-        .feed_reply {
-            padding: 0px 10px;
-            display: flex;
-            flex-direction: column;
-        }
+    .feed_like {
+        padding: 0px 10px;
+    }
 
-        .feed_txt {
-            font-size: 14px;
-        }
+    .feed_reply {
+        padding: 0px 10px;
+        display: flex;
+        flex-direction: column;
+    }
 
-        .feed_icon {
-            padding: 5px 5px 0px 5px;
-            display: flex;
-            justify-content: space-between;
-        }
-        span {
-            padding-right: 5px;
-        }
+    .feed_txt {
+        font-size: 14px;
+    }
 
-        .feed_name {
-            padding: 10px;
-            display: flex;
-            align-items: center;
-        }
+    .feed_icon {
+        padding: 5px 5px 0px 5px;
+        display: flex;
+        justify-content: space-between;
+    }
+    span {
+        padding-right: 5px;
+    }
 
-        .feed_name_txt {
-            font-size: 14px;
-            padding: 0px 10px;
-            font-weight: bold;
-        }
+    .feed_name {
+        padding: 10px;
+        display: flex;
+        align-items: center;
+    }
 
-        .profile_box {
-            width: 40px;
-            height: 40px;
-            border-radius: 70%;
-            overflow: hidden;
-        }
-        .profile_img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+    .feed_name_txt {
+        font-size: 14px;
+        padding: 0px 10px;
+        font-weight: bold;
+    }
 
-        .name_content {
-            display: flex;
-            flex-direction: column;
-        }
+    .profile_box {
+        width: 40px;
+        height: 40px;
+        border-radius: 70%;
+        overflow: hidden;
+    }
+    .profile_img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 
-        .name_content_txt {
-            font-size: 12px;
-            padding: 0px 10px;
-            font-weight: bold;
-            color: lightgray;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            width: 190px;
-        }
+    .name_content {
+        display: flex;
+        flex-direction: column;
+    }
 
-        .big_profile_box {
-            width: 60px;
-            height: 60px;
-            border-radius: 70%;
-            overflow: hidden;
-        }
+    .name_content_txt {
+        font-size: 12px;
+        padding: 0px 10px;
+        font-weight: bold;
+        color: lightgray;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 190px;
+    }
 
-        .link_txt {
-            font-size: 14px;
-            font-weight: bold;
-            cursor: pointer;
-            text-decoration: none;
-        }
+    .big_profile_box {
+        width: 60px;
+        height: 60px;
+        border-radius: 70%;
+        overflow: hidden;
+    }
 
-        .recommend_box {
-            display: flex;
-            justify-content: space-between;
-            padding: 5px;
-            font-size: 14px;
-            font-weight: bold;
-            align-items: center;
-        }
+    .link_txt {
+        font-size: 14px;
+        font-weight: bold;
+        cursor: pointer;
+        text-decoration: none;
+    }
 
-        .comment_box {
-            margin: 40px 0 0 5px;
-            font-size: 12px;
-            font-weight: bold;
-            color: lightgray;
-            display: flex;
-            flex-direction: column;
-        }
+    .recommend_box {
+        display: flex;
+        justify-content: space-between;
+        padding: 5px;
+        font-size: 14px;
+        font-weight: bold;
+        align-items: center;
+    }
+
+    .comment_box {
+        margin: 40px 0 0 5px;
+        font-size: 12px;
+        font-weight: bold;
+        color: lightgray;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .modal_overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(1.5px);
+    -webkit-backdrop-filter: blur(1.5px);
+    }
+
+    .modal_window {
+    background: white;
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    width: 800px;
+    height: 600px;
+    position: relative;
+    padding: 10px;
+    }
+
+    .modal_title{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-weight: bold;
+    font-size: 20px;
+    }
+
+    .modal_title_side{
+    flex: 0 0 40px;
+    text-align: center;
+    }
+
+    .modal_image_upload{
+        outline: 2px dashed black ;
+        outline-offset:-10px;
+        text-align: center;
+        transition: all .15s ease-in-out;
+        width:780px;
+        height: 548px;
+    }
+
     </style>
 
     <!-- nav -->
@@ -184,7 +237,7 @@
                 <div style="height: 27px;">
                     <span class="material-icons">home</span>
                     <span class="material-icons">send</span>
-                    <span class="material-icons-outlined">add_box</span>
+                    <span id="add_box" class="material-icons-outlined">add_box</span>
                     <span class="material-icons-outlined">explore</span>
                     <span class="material-icons-outlined">favorite_border</span>
                 </div>
@@ -356,6 +409,42 @@
                 </div>
             </div>
         </div>
+
+        <div id="modal_add_box" class="modal_overlay">
+            <div class="modal_window">
+                <div class="modal_title">
+                    <div class="modal_title_side"></div>
+                    <div> 새 게시물 </div>
+                    <div class="modal_title_side">
+                        <span id="close_modal" class="material-icons-outlined">
+                            close
+                        </span>
+                    </div>
+                </div>
+                <div class="modal_image_upload">
+
+                </div>
+            </div>
+        </div>
+    
+
+        <script>
+            // 모달 띄우기
+            const modal = document.getElementById("modal_add_box");
+            const buttonAddFeed = document.getElementById("add_box");
+            buttonAddFeed.addEventListener("click", e => {
+                modal.style.top = window.pageYOffset + 'px'
+                modal.style.display = "flex";               // 클릭시 스타일 변경
+                document.body.style.overflowY = "hidden"; //스크롤 없앰
+            });
+
+            // 모달 닫기
+            const buttonCloseModal = document.getElementById("close_modal");
+            buttonCloseModal.addEventListener("click", e => {
+                modal.style.display = "none";
+                document.body.style.overflowY = "visible";
+            });
+        </script>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
