--- a/templates/clone/main.html
+++ b/templates/clone/main.html
@@ -21,6 +21,9 @@
 
         <link rel="stylesheet" href="style.css?after">
 
+        <!-- Jquery -->
+        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
         <title>Instagram clone</title>
     </head>
 
@@ -416,9 +419,9 @@
                     <div class="modal_title_side"></div>
                     <div> 새 게시물 </div>
                     <div class="modal_title_side">
-                        <span id="close_modal" class="material-icons-outlined">
+                        <span id="close_modal" class="material-icons-outlined" aria-label="Close modal window">
                             close
-                        </span>
+                          </span>                          
                     </div>
                 </div>
                 <div class="modal_image_upload">
