--- a/templates/clone/css/main.css
+++ b/templates/clone/css/main.css
@@ -57,7 +57,6 @@
     display: flex;
     justify-content: space-between;
 }
-
 span {
     padding-right: 5px;
 }
@@ -80,7 +79,6 @@ span {
     border-radius: 70%;
     overflow: hidden;
 }
-
 .profile_img {
     width: 100%;
     height: 100%;
@@ -136,41 +134,50 @@ span {
 }
 
 .modal_overlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: rgba(0, 0, 0, 0.8);
-    backdrop-filter: blur(1.5px);
-    -webkit-backdrop-filter: blur(1.5px);
+width: 100%;
+height: 100%;
+position: absolute;
+left: 0;
+top: 0;
+display: none;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+background: rgba(0, 0, 0, 0.8);
+backdrop-filter: blur(1.5px);
+-webkit-backdrop-filter: blur(1.5px);
 }
 
 .modal_window {
-    background: white;
-    backdrop-filter: blur(13.5px);
-    -webkit-backdrop-filter: blur(13.5px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    width: 800px;
-    height: 600px;
-    position: relative;
-    padding: 10px;
+background: white;
+backdrop-filter: blur(13.5px);
+-webkit-backdrop-filter: blur(13.5px);
+border-radius: 10px;
+border: 1px solid rgba(255, 255, 255, 0.18);
+width: 800px;
+height: 600px;
+position: relative;
+padding: 10px;
 }
 
-.modal_title {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    font-weight: bold;
-    font-size: 20px;
+.modal_title{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+font-weight: bold;
+font-size: 20px;
 }
 
-.modal_title_side {
-    flex: 0 0 40px;
+.modal_title_side{
+flex: 0 0 40px;
+text-align: center;
+}
+
+.modal_image_upload{
+    outline: 2px dashed black ;
+    outline-offset:-10px;
     text-align: center;
+    transition: all .15s ease-in-out;
+    width:780px;
+    height: 548px;
 }
