--- a/templates/clone/main.html
+++ b/templates/clone/main.html
@@ -19,7 +19,7 @@
             rel="stylesheet"
         />
 
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="/static/css/main.css">
 
         <title>Instagram clone</title>
     </head>
@@ -239,7 +239,7 @@
             </div>
         </div>
     
-        <script src="js/main.js"></script>
+        <script src="/static/js/main.js"></script>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
