--- a/templates/clone/main.html
+++ b/templates/clone/main.html
@@ -228,17 +228,18 @@
                     <div class="modal_title_side"></div>
                     <div> 새 게시물 </div>
                     <div class="modal_title_side">
-                        <span id="close_modal" class="material-icons-outlined" aria-label="Close modal window">
-                            close
-                          </span>                          
+                        <span id="close_modal" class="material-icons-outlined">close</span>                          
                     </div>
                 </div>
                 <div class="modal_image_upload">
-
+                    <p>여기에 이미지를 드래그하세요</p>
                 </div>
             </div>
         </div>
-    
+          
+          
+
+
         <script src="/static/js/main.js"></script>
 
         <script
