--- a/templates/clone/main.html
+++ b/templates/clone/main.html
@@ -232,7 +232,9 @@
                     </div>
                 </div>
                 <div class="modal_image_upload">
-                    <p>여기에 이미지를 드래그하세요</p>
+                    <div class="drop_area">
+                        <p>여기에 이미지를 놓아주세요</p>
+                    </div>
                 </div>
             </div>
         </div>
