--- a/static/css/main.css
+++ b/static/css/main.css
@@ -173,15 +173,23 @@ span {
     text-align: center;
 }
 
+
 .modal_image_upload{
-    outline: 2px dashed black ;
-    outline-offset:-10px;
-    text-align: center;
-    transition: all .15s ease-in-out;
     width:780px;
     height: 548px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
+.drop_area {
+    width: 100%;
+    height: 100%;
+    outline: 2px dashed black;
+    outline-offset: -10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.drop_area.dragover {
+    background-color: rgba(0, 0, 0, 0.5);
+}
